--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,181 @@
-.App {
-  text-align: center;
+/* .container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+} */
+
+.mobile {
+  width: 375px;
+  height: 812px;
+  background: #f7f7f7;
+  border-radius: 25px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2em 2em 0;
+}
+main.data {
+  margin-top: 2em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.top {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+}
+.navBar {
+  display: flex;
+  align-items: center;
+}
+.ham {
+  margin-right: 1em;
+}
+.navBar img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
 }
 
-.App-link {
-  color: #61dafb;
+.input {
+  background: rgba(17, 16, 16, 0.03);
+  border-radius: 5px;
+  color: rgba(17, 16, 16, 0.3);
+  width: 315px;
+  height: 30px;
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  letter-spacing: 0.05em;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.input input {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  width: 85%;
+  color: dimgrey;
+}
+.filter {
+  display: flex;
+  align-items: center;
+}
+.filter p {
+  font-size: 15px;
+}
+.filter ul {
+  display: flex;
+  align-items: center;
+  padding-left: 1em;
+  margin-top: 20px;
+}
+.filter ul li {
+  list-style: none;
+  margin-right: 1em;
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.05em;
+  color: rgba(17, 16, 16, 0.5);
+  cursor: pointer;
+}
+.filter ul li.active {
+  color: #111010;
+}
+
+.dataCon span {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 12px;
+  letter-spacing: 0.05em;
+  color: rgba(17, 16, 16, 0.5);
+}
+.cont {
+  display: flex;
+  align-items: center;
+  margin: 1em 0 2em;
+}
+.cont img {
+  width: 80px;
+  height: 80px;
+}
+.note {
+  margin-left: 1em;
+}
+.note h2 {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 19px;
+  letter-spacing: 0.05em;
+  color: #111010;
+  margin: 5px 0;
+}
+.note span {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 12px;
+  margin: 5px 0;
+
+  letter-spacing: 0.05em;
+  color: rgba(17, 16, 16, 0.5);
+}
+.note p {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 12px;
+  letter-spacing: 0.02em;
+  margin: 5px 0;
+
+  color: #111010;
+}
+.line {
+  border: 0.3px solid rgba(17, 16, 16, 0.2);
+  width: 100%;
+  left: 0;
+  position: absolute;
+}
+footer {
+  background: transparent;
+  border-top: 0.2px solid rgba(17, 16, 16, 0.3);
+  position: absolute;
+  z-index: 11;
+  height: 67px;
+  width: 100%;
+  left: 0;
+  bottom: 0%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.icon {
+  font-size: 20px;
+  color: gray;
+  cursor: pointer;
+}
+footer .active {
+  color: black;
+}
+@media (max-width: 500px) {
+  .mobile {
+    /* width: 100%;
+   */
+    height: 100%;
+    border-radius: 0%;
   }
 }
