--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-/* .container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-} */
-
 .mobile {
   width: 375px;
   height: 812px;
@@ -16,13 +10,15 @@
   padding: 2em 2em 0;
 }
 main.data {
-  margin-top: 2em;
+  overflow-y: scroll;
+  height: 595px;
 }
 
 .top {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 1em;
 }
 .navBar {
   display: flex;
