--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .mobile {
   width: 375px;
   height: 812px;
   background: #f7f7f7;
   border-radius: 25px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
   padding: 2em 2em 0;
 }
 main.data {
@@ -37,7 +39,7 @@ main.data {
   background: rgba(17, 16, 16, 0.03);
   border-radius: 5px;
   color: rgba(17, 16, 16, 0.3);
-  width: 315px;
+  width: 100%;
   height: 30px;
   font-family: "Quicksand";
   font-style: normal;
@@ -178,9 +180,7 @@ footer .active {
 }
 @media (max-width: 500px) {
   .mobile {
-    /* width: 100%;
-   */
-    height: 100%;
-    border-radius: 0%;
+    width: 100%;
+    border-radius: 0;
   }
 }
